--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,11 @@
 [project]
-name = "producer-rabbitmq"
+name = "fastapi-rabbitmq"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.18.4",
     "fastapi[standard]>=0.129.2",
     "pika>=1.3.2",
+    "asyncpg>=0.30.0",
+    "sqlalchemy>=2.0.46",
 ]
